# xdscribe

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_boost.cmake  compare_objective_calls.cmake  compare_runtimes.cmake  external_utils.cmake  helpers.cmake  measure_performance.cmake  merge_files.cmake  reports_comparison_line.cmake
examples/cuts/: LICENSE
examples/stones/: LICENSE
source/: inscriber_factory.cpp  inscriber_factory.h  main.cpp
source/geometry/: kernel.h
source/geometry/convex_decomposition/: convex_decomposition.cpp  convex_decomposition.h  convex_part_builder.cpp  convex_part_builder.h  floodfill_convex_decomposition.cpp  floodfill_convex_decomposition.h  star_convex_decomposition.cpp  star_convex_decomposition.h
source/geometry/entity/: bounding_box.h  perpendicular.h  placement.h  polytope.cpp  polytope.h
source/geometry/location/: axis_distance.cpp  axis_distance.h  linear_test.h  location.cpp  location.h  simplex_facet_overlap.cpp  simplex_facet_overlap.h
source/geometry/utility/: cgal.h  xd_iterator.h
source/grid/rasterization/: bbox_facet_rasterizer.cpp  bbox_facet_rasterizer.h  facet_box_overlap.cpp  facet_box_overlap.h  facet_rasterizer.cpp  facet_rasterizer.h  inner_region_rasterizer.cpp  inner_region_rasterizer.h  polytope_rasterizer.cpp  polytope_rasterizer.h
source/grid/sampling/: mapper.h  refinement.cpp  refinement.h  sampling.h  sparse_raster.h  vector_sampling.h  vector_sparse_raster.h  xd_iterator.h
source/helper/: image_stats.cpp  image_stats.h  io.cpp  io.h  stats.cpp  stats.h  stopwatch.cpp  stopwatch.h
source/solver/: inscribed_radius.cpp  inscribed_radius.h  inscriber.h  iterative_inscriber.cpp  iterative_inscriber.h  objective.h
source/solver/conventional/: combined_objective_bounder.cpp  combined_objective_bounder.h  dlib_inscriber.cpp  dlib_inscriber.h  ghj_inscriber.cpp  ghj_inscriber.h  nlopt_inscriber.cpp  nlopt_inscriber.h  objective_bounder.h
source/solver/inverse/: accuracy_estimator.cpp  accuracy_estimator.h  domain_estimator.cpp  domain_estimator.h  general_accuracy_estimator.cpp  general_accuracy_estimator.h  graphic_inscriber.cpp  graphic_inscriber.h  halfspace_part_rasterizer.cpp  halfspace_part_rasterizer.h  minkowski_sum.cpp  minkowski_sum.h  minkowski_sum_rasterizer.cpp  minkowski_sum_rasterizer.h
source/utility/: generator.h  lazy.h  noncopyable.h  subsets.h
tests/: integration_test.cpp
tests/geometry/: axis_distance_test.cpp  helpers.h  location_test.cpp  polytope_test.cpp  simplex_facet_overlap_test.cpp
tests/grid/: mapper_test.cpp  refinement_test.cpp  xd_iterator_test.cpp
tests/utility/: generator_test.cpp  lazy_test.cpp  subsets_test.cpp
